fixed margins on mobile gallery

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -102,12 +102,9 @@ hr {
   h1 {
     padding: 50px 0 0 0;
   }
-  // #my-face {
-  //   width: 100px;
-  //   display: block;
-  //   padding: 30px 0 0 0;
-  //   margin: 0 auto;
-  // }
+  .header-text {
+    margin: 0 75px 0 0;
+  }
   #my-name {
     color: $secondary-color;
   }
@@ -139,16 +136,11 @@ hr {
 #workSection {
   width: 900px;
   margin: 0 auto;
-  .work-title {
-    width: 236px;
-    margin: 0;
-    @include title-style;
-  }
 }
 
 .gallery-img {
   position: relative;
-  margin: 0 0 0 10px;
+  margin: 0 10px;
   display: inline-block;
   width: 400px;
   text-align: center;
@@ -162,8 +154,8 @@ hr {
   .overlay {
     background: #000;
     position: absolute;
-    height: 80%;
-    width: 100%;
+    height: 160px;
+    width: 400px;
     left: 15px;
     top: 20px;
     opacity: 0;
@@ -518,24 +510,36 @@ hr {
       font-size: $med-font-size;
     }
   }
+
+  #workSection {
+    width: 375px;
+    //margin: 0 auto;
+    .gallery-img {
+      width: 355px;
+      .image {
+        width: 90%;
+      }
+      .overlay {
+        width: 320px;
+        height: 130px;
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 375px) {
-  // gallery images
-  // #workSection {
-  //   width: 350px;
-  //   margin: 0 0 0 -20px;
-  //   .gallery-img {
-  //     text-align: center;
-  //     vertical-align: middle;
-  //     margin: 0 auto;
-  //     .overlay {
-  //       width: 350px;
-  //       margin: 0 0 0 10px;
-  //     }
-  //   }
-  //   .image {
-  //     width: 300px;
-  //   }
-  // }
+  #workSection {
+    //width: 375px;
+    //margin: 0 auto;
+    .gallery-img {
+      width: 325px;
+      .image {
+        width: 90%;
+      }
+      .overlay {
+        width: 295px;
+        height: 120px;
+      }
+    }
+  }
 }
